# BUKLODConnect

./: .gitignore  README.md  build.gradle.kts  buklod.firebaserc.txt  firebase.json  gradle.properties  package-lock.json  package.json  pyproject.toml  settings.gradle.kts
.firebase/: hosting.YnVpbGQ.cache  hosting.YnVrbG9kd2ViYXBw.cache
.github/workflow/: firebase-hosting-deploy.yml
.github/workflows/: firebase-deploy.yml  firebase-hosting-deploy.yml  main.yml
app/: build.gradle.kts  buklod.js  google-services (4).json  google-services.json  index.html  package-lock.json  package.json
app/src/: app.js
app/src/androidTest/java/com/example/buklodconnect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/buklodconnect/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/buklodconnect/: ExampleUnitTest.kt
buklodwebapp/: firebase.json  index.html
gradle/: libs.versions.toml
