    toml
    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [project]
    name = "my_package"
    version = "0.1.0"
    authors = [
      { name="Your Name", email="you@example.com" },
    ]
    description = "A small example package"
    readme = "README.md"
    requires-python = ">=3.8"
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
    dependencies = [
        "requests>=2.20",
        # other dependencies
    ]

    [project.urls]
    "Homepage" = "https://github.com/pypa/sampleproject"
    "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

    # Example of a tool-specific table
    [tool.black]
    line-length = 88